@@ -552,6 +552,16 @@ protected:
 	MyActionGroup * angleGroup;
 	MyActionGroup * chapterGroup;
 
+#if DVDNAV_SUPPORT
+	MyAction * dvdnavUpAct;
+	MyAction * dvdnavDownAct;
+	MyAction * dvdnavLeftAct;
+	MyAction * dvdnavRightAct;
+	MyAction * dvdnavMenuAct;
+	MyAction * dvdnavSelectAct;
+	MyAction * dvdnavPrevAct;
+	/* MyAction * dvdnavMouseAct; */
+#endif
 
 	// MENUS
 	QMenu *openMenu;
